--- a/index.qmd
+++ b/index.qmd
@@ -116,7 +116,7 @@ toc: false
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
 ## A demonstration of the law of the flowering plants
-The day a flower blooms is one of the earliest phenomena studied with systematic data collection and analysis. In this tutorial, Jonathan Auerbach introduces the “law of the flowering plants” and demonstrates how it can be applied to modern datasets.
+The day a flower blooms is one of the earliest phenomena studied with systematic data collection and analysis. In this tutorial, Jonathan Auerbach introduces Adolphe Quetelet's “law of the flowering plants” and demonstrates how it can be applied to modern datasets.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
 ![](ideas/tutorials/posts/2023/04/13/images/quetelet-flowers.png)
