--- a/ideas/tutorials/posts/2023/04/13/flowers.qmd
+++ b/ideas/tutorials/posts/2023/04/13/flowers.qmd
@@ -48,9 +48,9 @@ We begin by reviewing the law of the flowering plants as it was stated by Adolph
 He communicated this law in his *Letters addressed to HRH the grand duke of Saxe-Coburg and Gotha* [Number 33, -@quetelet1846lettres; translated -@quetelet_1849] and in his reporting *On the climate of Belgium* [Chapter 4, Part 4, -@observatoire1834annales; data updated in Part 7, -@quetelet_1857]. A picture of Quetelet and the title page of On the climate of Belgium (1857) are displayed in Figure 1.
 
 :::{layout-ncol=2}
-![](images/quetelet_1875400.jpg){description="Adolphe Quetelet. Source: [Wikimedia Commons](https://en.wikipedia.org/wiki/Adolphe_Quetelet#/media/File:Adolphe_Qu%C3%A9telet_by_Joseph-Arnold_Demannez.jpg)." height=400px group="Quetelet"}
+![](images/quetelet_1875400.jpg){description="Adolphe Quetelet. Source: [Wikimedia Commons](https://en.wikipedia.org/wiki/Adolphe_Quetelet#/media/File:Adolphe_Qu%C3%A9telet_by_Joseph-Arnold_Demannez.jpg)" height=400px group="Quetelet"}
 
-![](images/sur_le_climat400.jpeg){description="Title page of *On the climate of Belgium.* Source: [Gallica](https://gallica.bnf.fr/ark:/12148/bpt6k95028d)." height=400px group="Quetelet"}
+![](images/sur_le_climat400.jpeg){description="Title page of *On the climate of Belgium.* Source: [Gallica](https://gallica.bnf.fr/ark:/12148/bpt6k95028d)" height=400px group="Quetelet"}
 :::
 
 :::{.figure-caption}
@@ -61,7 +61,7 @@ Quetelet was not the first to study bloom dates. Anthophiles have recorded the d
 
 Quetelet was also not the first to study the relationship between temperature and bloom dates. René Réaumur [-@deréaumur_1735], an early adopter of the thermometer, noted the relationship before Marsham published his *Indications*. But Quetelet was the first to systematically study the relationship across a wide variety of plants and derive the amount of heat needed to bloom. An example of Quetelet's careful record keeping can be seen in Figure 2, one of many tables he reported in his publications.
 
-![](images/quetelet_bloom.png){width="600" fig-align="center" description="Bloom dates at Brussels Observatory observed by Quetelet between 1839 and 1852. Source: [Gallica](https://gallica.bnf.fr/ark:/12148/bpt6k95028d)."}
+![](images/quetelet_bloom.png){width="600" fig-align="center" description="Bloom dates at Brussels Observatory observed by Quetelet between 1839 and 1852. Source: [Gallica](https://gallica.bnf.fr/ark:/12148/bpt6k95028d)"}
 
 ::: {.figure-caption}
 **Figure 2:** Bloom dates at Brussels Observatory observed by Quetelet between 1839 and 1852. Source: [Gallica](https://gallica.bnf.fr/ark:/12148/bpt6k95028d).
@@ -71,11 +71,11 @@ Quetelet was also not the first to study the relationship between temperature an
 To reproduce Quetelet's law, we combine the data in Figure 2 with additional observations from his *Letters*. We focus on Quetelet's primary example, the bloom date of the common lilac, *Syringa vulgaris*, row 18 of Figure 2. We do this because Quetelet carefully describes his methodology for measuring the bloom date of lilacs. For example, Quetelet considers a lilac to have bloomed when "the first corolla opens and shows the stamina." That event is closest to what the USA Phenology Network describes as "open flowers", depicted in the center image of Figure 3 below. This detail will become relevant when we attempt to replicate Quetelet's law in a later section. Note that although we focus on lilacs in this tutorial, the `R` code is easily edited to predict the day that other plants will bloom.
 
 :::{layout-ncol=3}
-![](images/buds250.jpg){height=250px group="flowers" description="Flower buds. Source: [USA National Phenology Network](https://www.usanpn.org/nn/TrackaLilac)."}
+![](images/buds250.jpg){height=250px group="flowers" description="Flower buds. Source: [USA National Phenology Network](https://www.usanpn.org/nn/TrackaLilac)"}
 
-![](images/open_flowers250.jpg){height=250px group="flowers" description="Open flowers. Source: [USA National Phenology Network](https://www.usanpn.org/nn/TrackaLilac)."}
+![](images/open_flowers250.jpg){height=250px group="flowers" description="Open flowers. Source: [USA National Phenology Network](https://www.usanpn.org/nn/TrackaLilac)"}
 
-![](images/full_flowers250.jpg){height=250px group="flowers" description="Full flowers. Source: [USA National Phenology Network](https://www.usanpn.org/nn/TrackaLilac)."}
+![](images/full_flowers250.jpg){height=250px group="flowers" description="Full flowers. Source: [USA National Phenology Network](https://www.usanpn.org/nn/TrackaLilac)"}
 :::
 
 :::{.figure-caption}
@@ -698,7 +698,7 @@ If Quetelet's law of the flowering plants is correct, Table 3 has the following 
   config(displaylogo = FALSE)
 ```
 
-![](images/fig4.png){description="**Figure 4:** According to Quetelet's law, the lilacs bloom when exposed to 4264°C² following the last frost. Author provided, [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)."}
+![](images/fig4.png){description="**Figure 4:** According to Quetelet's law, the lilacs bloom when exposed to 4264°C² following the last frost. Author provided, [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)"}
 
 :::{.figure-caption}
 **Figure 4:** According to Quetelet's law, the lilacs bloom when exposed to 4264°C² following the last frost. Author provided, [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/).
@@ -1578,7 +1578,7 @@ Although the accuracy of the predictions made using Quetelet's law is lower when
   config(displaylogo = FALSE)
 ```
 
-![](images/fig5.png){description="**Figure 5:** Predictions using Quetelet's law are accurate within about two weeks on average. Author provided, [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)."}
+![](images/fig5.png){description="**Figure 5:** Predictions using Quetelet's law are accurate within about two weeks on average. Author provided, [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)"}
 
 :::{.figure-caption}
 **Figure 5:** Predictions using Quetelet's law are accurate within about two weeks on average. Author provided, [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/).
@@ -1978,7 +1978,7 @@ We visualize the predictions in Figure 6, which has the same interpretation as F
   config(displaylogo = FALSE)
 ```
 
-![](images/fig6.png){description="**Figure 6:** According to Quetelet's law, the lilacs will bloom once exposed to 4264°C² following the last frost. Author provided, [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)."}
+![](images/fig6.png){description="**Figure 6:** According to Quetelet's law, the lilacs will bloom once exposed to 4264°C² following the last frost. Author provided, [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)"}
 
 :::{.figure-caption}
 **Figure 6:** According to Quetelet's law, the lilacs will bloom once exposed to 4264°C² following the last frost. Author provided, [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/).
@@ -1994,7 +1994,7 @@ Although Quetelet did not discover the law, he did much to advance it. Quetelet 
 
 In recent years, the observations collected through phenology networks have become an important resource for understanding the impacts of climate change. For example, the USA National Phenology Network calculates the Spring Bloom Index, which measures the "first day of spring" using the days lilacs are observed to bloom at locations across the United States. The index is then compared to previous years. Figure 7 shows one comparison, called the Return Interval. The Return Interval is much like a p-value, calculating how frequently more extreme spring indices were observed in previous decades. Bloom dates that are uncommonly early (green) or late (purple) may indicate environments stressed by changing climate. Scientists exploit the relationship between temperature and bloom date to extrapolate the index to areas with few observations.
 
-![](images/six-bloom-return-interval-2020.png){description="**Figure 7:** The Spring Bloom Index Return Interval measures whether spring is typical when compared to recent decades. Source: [USA National Phenology Network](https://www.usanpn.org/files/npn/maps/six-bloom-return-interval-2020.png)."}
+![](images/six-bloom-return-interval-2020.png){description="**Figure 7:** The Spring Bloom Index Return Interval measures whether spring is typical when compared to recent decades. Source: [USA National Phenology Network](https://www.usanpn.org/files/npn/maps/six-bloom-return-interval-2020.png)"}
 
 :::{.figure-caption}
 **Figure 7:** The Spring Bloom Index Return Interval measures whether spring is typical when compared to recent decades. Source: [USA National Phenology Network](https://www.usanpn.org/files/npn/maps/six-bloom-return-interval-2020.png).
