minor style fixes and repair broken link

--- a/ideas/tutorials/posts/2023/04/13/flowers.qmd
+++ b/ideas/tutorials/posts/2023/04/13/flowers.qmd
@@ -374,7 +374,7 @@ To reproduce Quetelet's law of the flowering plants, we will combine these bloom
 
 The `ghcnd_search` function returns the maximum and minimum temperature as separate tibbles in a list. In the `R` code below, we join the tibbles using the `reduce` function. Note that the temperature is reported in tenths of a degree (i.e. 0.1°C) so we divide by 10 before calculating the temperature midrange, our estimate of the daily temperature.
 
-The result is a five column tibble `temp`, which contains the year of the temperature record ("year"), the date of the temperature record ("date"), the maximum temperature ("tmax"), the minimum temperature ("tmin"), and the midrange temperature ("temp"). The first 10 rows of the table are below. When you produce the full table yourself, you may notice that a small portion of temperature records are missing. We found that imputing these missing values does not significantly change the results. Therefore, we ignore these days when conducting our analysis.
+The result is a five-column tibble `temp`, which contains the year of the temperature record ("year"), the date of the temperature record ("date"), the maximum temperature ("tmax"), the minimum temperature ("tmin"), and the midrange temperature ("temp"). The first 10 rows of the table are below. When you produce the full table yourself, you may notice that a small portion of temperature records are missing. We found that imputing these missing values does not significantly change the results. Therefore, we ignore these days when conducting our analysis.
 
 ```{{r}}  
 temp <- 
@@ -893,7 +893,7 @@ Today, the law of the flowering plants is considered a heuristic, or rule of thu
 
 In the previous section, we explained how Quetelet derived the law of the flowering plants. Quetelet believed the law of the flowering plants was universal, describing the bloom date of all flowers around the world and in any year. Whether the law can in fact be considered universal requires replicating Quetelet's results with new data collected at a different location in a different year.
 
-In this section, we replicate the law of the flowering plants using lilac bloom dates observed by scientists between 1956 and 2009 at 53 locations throughout the Pacific Northwest [-@rosemartin_denny_weltzin_lee_marsh_wilson_mehdipoor_zurita-milla_schwartz_2015]. The data can be downloaded from the USA National Phenology Network using the `rnpn` package [-@the_comprehensive_r_archive_network_2022]. For space considerations, the `R` code that downloads and cleans the data is provided in the [Appendix](http://localhost:3119/ideas/tutorials/03/XX-flowers/flowers.html#appendix-preparing-usa-npn-data). Running this code yields the tibble `usa_npn`. Each row of the tibble corresponds with a bloom date observed at a given site in a given year. There are 31 columns, only seven of which we use in our replication. The remaining columns are documented in the `rnpn` package, and we will not review them here. 
+In this section, we replicate the law of the flowering plants using lilac bloom dates observed by scientists between 1956 and 2009 at 53 locations throughout the Pacific Northwest [-@rosemartin_denny_weltzin_lee_marsh_wilson_mehdipoor_zurita-milla_schwartz_2015]. The data can be downloaded from the USA National Phenology Network using the `rnpn` package [-@the_comprehensive_r_archive_network_2022]. For space considerations, the `R` code that downloads and cleans the data is provided in the [Appendix](#appendix-preparing-usa-npn-data). Running this code yields the tibble `usa_npn`. Each row of the tibble corresponds with a bloom date observed at a given site in a given year. There are 31 columns, only seven of which we use in our replication. The remaining columns are documented in the `rnpn` package, and we will not review them here. 
 
 Table 7 displays six of the seven columns (and only the first 10 rows of the full table). These columns are defined in the same way as the columns of [Table 1](#tab-table1), except for "site_id", which denotes the site at which the observation was made. Table 1 does not have a "site_id" column because all observations were made at the same site, Brussels Observatory.
 
@@ -1169,7 +1169,7 @@ doy
 
 :::
 
-The seventh column we review is "temp". Each row of "temp" is a tibble of temperature records taken at the nearest station in the Global Historical Climatology Network. The first tibble (again, only the first 10 rows) is displayed in Table 8 below. The columns are defined in the same way as the columns of [Table 2](#tab-table2), except for "id", which denotes the location at which the temperature record was made. Table 2 does not have a "id" column because all observations were made at the same site, Brussels Observatory.
+The seventh column we review is "temp". Each row of "temp" is a tibble of temperature records taken at the nearest station in the Global Historical Climatology Network. The first tibble (again, only the first 10 rows) is displayed in Table 8 below. The columns are defined in the same way as the columns of [Table 2](#tab-table2), except for "id", which denotes the location at which the temperature record was made. Table 2 does not have an "id" column because all observations were made at the same site, Brussels Observatory.
 
 ```{{r}}
 usa_npn %>%
@@ -1990,7 +1990,7 @@ In this tutorial, we stated the law of the flowering plants and explained how Qu
 
 The law of the flowering plants surely stands the test of time. It continues to be used by scientists -- with relatively few changes -- to plan harvests, manage pests, and study ecosystems stressed by climate change. We speculate the law's longevity is due to the fact that it balances simplicity with relatively accurate predictions.
 
-Although Quetelet did not discover the law, he did much to advance it. Quetelet founded an international network for "observations of the periodical phenomena" (in addition to numerous statistical societies and publications, including the precursor to the Royal Statistical Society). Quetelet’s network of eighty stations collected observations throughout Europe from 1841 until 1872. In particular, Quetelet collaborated with Charles Morren -- who later coined the term phenology, the name of the field that now studies biological life-cycle events like the timing of flower blooms [@demarée_rutishauser_2011].
+Although Quetelet did not discover the law, he did much to advance it. Quetelet founded an international network for "observations of the periodical phenomena" (in addition to numerous statistical societies and publications, including the precursor to the Royal Statistical Society). Quetelet’s network of 80 stations collected observations throughout Europe from 1841 until 1872. In particular, Quetelet collaborated with Charles Morren -- who later coined the term phenology, the name of the field that now studies biological life-cycle events like the timing of flower blooms [@demarée_rutishauser_2011].
 
 In recent years, the observations collected through phenology networks have become an important resource for understanding the impacts of climate change. For example, the USA National Phenology Network calculates the Spring Bloom Index, which measures the "first day of spring" using the days lilacs are observed to bloom at locations across the United States. The index is then compared to previous years. Figure 7 shows one comparison, called the Return Interval. The Return Interval is much like a p-value, calculating how frequently more extreme spring indices were observed in previous decades. Bloom dates that are uncommonly early (green) or late (purple) may indicate environments stressed by changing climate. Scientists exploit the relationship between temperature and bloom date to extrapolate the index to areas with few observations.
 
