initial article upload

--- a/careers/index.qmd
+++ b/careers/index.qmd
@@ -4,7 +4,8 @@ title: Careers
 subtitle: "Insight, advice and guidance on how to succeed in data science. In this section: [Career profiles](career-profiles/index.qmd)"
 search: false 
 listing:
-  contents: 
+  contents:
+  - posts 
   - career-profiles
   - "!index.qmd"
   sort: "date desc"
