--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!flowers.qmd"
+    - "!politics-of-performance-measurement.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -111,15 +111,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/ideas/tutorials/posts/2023/04/13/flowers.qmd">
+<a href="/careers/posts/2023/04/18/politics-of-performance-measurement.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## A demonstration of the law of the flowering plants
-The day a flower blooms is one of the earliest phenomena studied with systematic data collection and analysis. In this tutorial, Jonathan Auerbach introduces Adolphe Quetelet's “law of the flowering plants” and demonstrates how it can be applied to modern datasets.
+## The politics of performance measurement
+Data scientist Noah Wright recounts the trials and tribulations of managing and meeting stakeholder expectations in developing a performance measurement program for specialty courts in Texas.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](ideas/tutorials/posts/2023/04/13/images/quetelet-flowers.png)
+![](careers/posts/2023/04/18/images/crowd-of-voices.png)
 :::
 :::
 
@@ -200,11 +200,11 @@ Detlef Nauck on the risks of large language models
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## It is arbitrary how we choose to model a situation. There are infinitely many different ways that you could choose to simplify reality -- this huge, messy, complex thing in front of us.
-Erica Thompson on the ethics of modelling
+## Quetelet’s emphasis on discovering the universal laws he believed govern social and biological phenomenon has not endured. But data scientists continue to appropriate laws from one area of science to study another.
+Jonathan Auerbach on the law of the flowering plants
 
 ::: {.button .button1}
-[Watch the interview](viewpoints/interviews/posts/01/25/erica-thompson.qmd)
+[Try the tutorial](ideas/tutorials/posts/2023/04/13/flowers.qmd)
 :::
 
 :::
