new career profile published

--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!politics-of-performance-measurement.qmd"
+    - "!sami-rahman.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -111,15 +111,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/careers/posts/2023/04/18/politics-of-performance-measurement.qmd">
+<a href="/careers/career-profiles/posts/2023/04/24/sami-rahman.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## The politics of performance measurement
-Data scientist Noah Wright recounts the trials and tribulations of managing and meeting stakeholder expectations in developing a performance measurement program for specialty courts in Texas.
+## 'I always thought someone like me couldn't work in data, let alone data science'
+Sami Rahman, head of data engineering and data platform at Penguin Random House, parlayed a psychology degree into a data science career – inspired by a talk on machine learning's application to human behaviour.
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](careers/posts/2023/04/18/images/crowd-of-voices.png)
+![](careers/career-profiles/posts/2023/04/24/images/sami-rahman-bw.png)
 :::
 :::
 
@@ -158,27 +158,14 @@ Welcome to the home of **Real World Data Science**, a new project from the [Roya
 ::: {.pullout-block .black-background}
 ![](images/quote-purple.png){width="100px"}
 
-## We are seeing communities who don't necessarily have the technical background to judge the capabilities of these models, but see the opportunities for their own domain and might be acting too fast in adopting them. The producer of these models has a certain responsibility to make sure that this doesn't happen.
-Detlef Nauck on the risks of large language models
+## This is a story of making opportunity out of crisis, of the interaction between not just theory of change and technical implementation, but the 'political' process of negotiating these changes with stakeholders in a manner that led to better decisions. 
+Noah Wright on 'The politics of performance measurement'
 
 ::: {.button .button1}
-[Watch the interview](viewpoints/editors-blog/posts/2023/01/27/talking-chatgpt.qmd)
+[Read the article](careers/posts/2023/04/18/politics-of-performance-measurement.qmd)
 :::
 
 :::
-:::
-:::
-
-::: {.content-container}
-::: {.listing-block}
-<a href="ideas/datasciencebites/index.qmd">
-
-## Data Science Bites 
-</a>
-
-::: {#datasciencebites}
-:::
-
 :::
 :::
 
@@ -190,6 +177,19 @@ Detlef Nauck on the risks of large language models
 </a> 
 
 ::: {#interviews}
+:::
+
+:::
+:::
+
+::: {.content-container}
+::: {.listing-block}
+<a href="ideas/datasciencebites/index.qmd">
+
+## Data Science Bites 
+</a>
+
+::: {#datasciencebites}
 :::
 
 :::
