timestamps checked and updated

--- a/viewpoints/interviews/posts/04/26/stephanie-hare.qmd
+++ b/viewpoints/interviews/posts/04/26/stephanie-hare.qmd
@@ -1,7 +1,7 @@
 ---
 title: "'I'm way more into prevention than cure': Stephanie Hare on why we need a culture of technology ethics"
 description: |
-  Stephanie Hare, author of 'Technology is Not Neutral', talks to Real World Data Science about  the 'wicked problem' of technology and AI ethics, and why laws and regulations are 'necessary but insufficient' to minimise harms. 'We’re going to have to inculcate an entire new mindset', she argues.        
+  Stephanie Hare, author of 'Technology is Not Neutral', talks to Real World Data Science about the 'wicked problem' of technology and AI ethics, and why laws and regulations are 'necessary but insufficient' to minimise harms. 'We’re going to have to inculcate an entire new mindset', she argues.        
 categories:
   - Technology ethics
   - AI ethics
@@ -14,15 +14,14 @@ image: images/stephanie-hare-bw.png
 image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.  
 ---
 
-<!-- Add intro
-check timestamps and quote timings against transcript and video -->
+<!-- Add intro -->
 
 Check out our full conversation below or on YouTube.
 
 <!-- {{< video [add url] >}} -->
 
 ## Timestamps
-* ChatGPT and other "flavours of the month" in the tech industry (1:04)
+* ChatGPT: just another "flavour of the month" in the tech industry? (1:18)
 * Has concern about large language models helped put technology ethics on the map? (3:17)
 * What will it take to build a culture of technology ethics -- in society, in academia, in industry? (9:16)
 * Drawing lessons from history (12:15)
@@ -32,9 +31,9 @@ Check out our full conversation below or on YouTube.
 ## Quotes
 "The European Union has the AI Act coming down the pipe. It doesn't cover stuff like ChatGPT specifically, but then I don't know if you want good regulation to cover the technology itself, or how technology is used. I talked about this in my book: do you want to regulate forks -- a tool -- or do you want to regulate use cases for forks? We've regulated the use case, if you will, of murder, or of injury with a fork -- or, frankly, any other tool. So it's the use case we focus on. We don't really regulate forks. [But] we do regulate some technologies, like biomedical technologies, human genetic stuff, anything nuclear. So we just need to think about where does AI fit with that?" (5:42)
 
-"Move fast and break things was the mantra for this culture [in the technology industry] for a really long time, at least out of the US. And it made a lot of people a lot of money, and they got worshipped by the media. And, you know, they have a whole audience of bros who are fans of them. And they've never really, any of them, been held to account for what they've built." (11:56)
+"Move fast and break things was the mantra for this culture [in the technology industry] for a really long time, at least out of the US. And it made a lot of people a lot of money, and they got worshipped by the media. And, you know, they have a whole audience of 'bros' who are fans of them. And they've never really, any of them, been held to account for what they've built." (11:56)
 
-"Another generation or two, when we're older, might look at some of what technology we've built or our behaviour on climate change, our track record -- did we do what we could have done to slow global warming, to improve biodiversity? -- and they might hold us to account, saying, 'You could have stopped this and you didn't, right? It's not just what you did. It's what you did not do.' So we have to be super careful when we think about ethics, because ethics change, values change over time. And what seems okay today may not be okay in 10, 20, 30 years time. That is on my mind all the time. It's not very relaxing." (17:41)
+"Another generation or two, when we're older, might look at some of what technology we've built or our behaviour on climate change, our track record -- did we do what we could have done to slow global warming, to improve biodiversity? -- and they might hold us to account, saying, 'You could have stopped this and you didn't, right? It's not just what you did. It's what you did not do.' So we have to be super careful when we think about ethics, because ethics change, values change over time. And what seems okay today may not be okay in 10, 20, 30 years time. That is on my mind all the time. It's not very relaxing." (18:30)
 
 "[Laws and regulations] are important, they're necessary, but they're insufficient. You can act a lot faster if you can get people preventing stuff from being built in the first place, and that means you need to have a culture of people working in technology, both within the organisations -- whether that's research labs, government, companies, universities, whatever -- and on the outside -- journalists, academics, thinkers, etc., or just the public, an informed public -- who can see something and sound the alarm and go, 'Wait a minute, hang on. That's not okay.'" (33:02)
 
@@ -150,7 +149,7 @@ Copyright and licence
 
 How to cite
 
-:   Tarran, Brian. 2023. "XXXXXXX." Real World Data Science, April 26, 2023. [URL](https://realworlddatascience.net/viewpoints/interviews/posts/04/26/stephanie-hare.html)
+:   Tarran, Brian. 2023. "'I'm way more into prevention than cure': Stephanie Hare on why we need a culture of technology ethics." Real World Data Science, April 26, 2023. [URL](https://realworlddatascience.net/viewpoints/interviews/posts/04/26/stephanie-hare.html)
 :::
 :::
 :::
