--- a/viewpoints/interviews/posts/04/26/stephanie-hare.qmd
+++ b/viewpoints/interviews/posts/04/26/stephanie-hare.qmd
@@ -14,28 +14,32 @@ image: images/stephanie-hare-bw.png
 image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stephanie Hare, used with permission.  
 ---
 
-<!-- Add intro -->
+We're about a year late coming to [Stephanie Hare](https://www.harebrain.co/)'s book, [*Technology is Not Neutral: A Short Guide to Technology Ethics*](https://londonpublishingpartnership.co.uk/technology-is-not-neutral/). But, as discussed in our interview below, time has only made the text more relevant. The book was written pre-ChatGPT, but Hare's explorations of ethical questions in the context of facial recognition technology and Covid-19 exposure tracking apps feel both pointed and urgent at this moment, when researchers, regulators, and regular people are weighing the opportunities and potential harms of large language models and generative AI tools.
 
-Check out our full conversation below or on YouTube.
+"We\'re having some sort of moment with technology ethics -- AI ethics being just a branch of that," says Hare. Reflecting on her career, spanning 25 years, she says: "The stuff that we\'re talking about today that dominates the headlines -- that is dominating the discussion in the tech sector -- was not discussed at all at the turn of the century, other than by maybe people in the science and technology studies domain or academics. But it wasn\'t filtering into boardrooms. It wasn\'t on the front pages of newspapers, and it wasn\'t being covered in the national news. So, it\'s amazing. A whole field has sprung up."
+
+However, as Hare makes clear in our interview, we still have a long way to go to build a culture of technology ethics throughout society. Check out the full conversation below or on YouTube.
 
 <!-- {{< video [add url] >}} -->
 
 ## Timestamps
-* ChatGPT: just another "flavour of the month" in the tech industry? (1:18)
-* Has concern about large language models helped put technology ethics on the map? (3:17)
-* What will it take to build a culture of technology ethics -- in society, in academia, in industry? (9:16)
-* Drawing lessons from history (12:15)
-* Why technology ethics is a "wicked problem" (24:57)
-* Checklists and changing mindsets (29:49)   
+
+-   ChatGPT: just another "flavour of the month" in the tech industry? (1:18)
+-   Has concern about large language models helped put technology ethics on the map? (3:17)
+-   What will it take to build a culture of technology ethics -- in society, in academia, in industry? (9:16)
+-   Drawing lessons from history (12:15)
+-   Why technology ethics is a "wicked problem" (24:57)
+-   Checklists and changing mindsets (29:49)
 
 ## Quotes
-"The European Union has the AI Act coming down the pipe. It doesn't cover stuff like ChatGPT specifically, but then I don't know if you want good regulation to cover the technology itself, or how technology is used. I talked about this in my book: do you want to regulate forks -- a tool -- or do you want to regulate use cases for forks? We've regulated the use case, if you will, of murder, or of injury with a fork -- or, frankly, any other tool. So it's the use case we focus on. We don't really regulate forks. [But] we do regulate some technologies, like biomedical technologies, human genetic stuff, anything nuclear. So we just need to think about where does AI fit with that?" (5:42)
 
-"Move fast and break things was the mantra for this culture [in the technology industry] for a really long time, at least out of the US. And it made a lot of people a lot of money, and they got worshipped by the media. And, you know, they have a whole audience of 'bros' who are fans of them. And they've never really, any of them, been held to account for what they've built." (11:56)
+"The European Union has the AI Act coming down the pipe. It doesn't cover stuff like ChatGPT specifically, but then I don't know if you want good regulation to cover the technology itself, or how technology is used. I talked about this in my book: do you want to regulate forks -- a tool -- or do you want to regulate use cases for forks? We've regulated the use case, if you will, of murder, or of injury with a fork -- or, frankly, any other tool. So it's the use case we focus on. We don't really regulate forks. \[But\] we do regulate some technologies, like biomedical technologies, human genetic stuff, anything nuclear. So we just need to think about where does AI fit with that?" (5:42)
+
+"Move fast and break things was the mantra for this culture \[in the technology industry\] for a really long time, at least out of the US. And it made a lot of people a lot of money, and they got worshipped by the media. And, you know, they have a whole audience of 'bros' who are fans of them. And they've never really, any of them, been held to account for what they've built." (11:56)
 
 "Another generation or two, when we're older, might look at some of what technology we've built or our behaviour on climate change, our track record -- did we do what we could have done to slow global warming, to improve biodiversity? -- and they might hold us to account, saying, 'You could have stopped this and you didn't, right? It's not just what you did. It's what you did not do.' So we have to be super careful when we think about ethics, because ethics change, values change over time. And what seems okay today may not be okay in 10, 20, 30 years time. That is on my mind all the time. It's not very relaxing." (18:30)
 
-"[Laws and regulations] are important, they're necessary, but they're insufficient. You can act a lot faster if you can get people preventing stuff from being built in the first place, and that means you need to have a culture of people working in technology, both within the organisations -- whether that's research labs, government, companies, universities, whatever -- and on the outside -- journalists, academics, thinkers, etc., or just the public, an informed public -- who can see something and sound the alarm and go, 'Wait a minute, hang on. That's not okay.'" (33:02)
+"\[Laws and regulations\] are important, they're necessary, but they're insufficient. You can act a lot faster if you can get people preventing stuff from being built in the first place, and that means you need to have a culture of people working in technology, both within the organisations -- whether that's research labs, government, companies, universities, whatever -- and on the outside -- journalists, academics, thinkers, etc., or just the public, an informed public -- who can see something and sound the alarm and go, 'Wait a minute, hang on. That's not okay.'" (33:02)
 
 ## Transcript
 
@@ -89,7 +93,7 @@ This is gonna sound completely weird, but it didn't come from my experience in t
 I think that that kind of origin story, if you like, explains some of your, perhaps, belief in the importance of exploring this accountability question when it comes to technology, ethics?
 
 **Stephanie Hare**\
-Yeah, because I watched it, and I think what was so fascinating-- So as I say, I was in my early 20s. In fact, I was 20, when this man was put on trial, and I had just moved to France. It was the longest trial in French legal history -- it was a big deal, you could not not watch it. So I was reading this and seeing it in the press every day, and I watched the French people discussing it around me, you know, really being divisive, this stuff does not go away. And his view was: I was just following orders, I was doing what I was told to do. Which you know, you hear that a lot from engineers or people who are like, this is the design spec I've been given, or this is what my boss has told me to do, or this is what our investors want, etc. Or people feel they don't have the power to stand up because, you know what, they've got a mortgage, they've got kids, and employers know that, like, they know that and they use it as leverage against people to silence them. Or they've signed an NDA, because we get made to sign these NDAs when we work in tech, and then we get made to sign another NDA when we leave, right, so we can't disparage our employer, and maybe we're given some money so we don't talk about the things we've seen. You know, it's, it's gross -- it's a gross little world, and like you have to be very, very solid and take good care of yourself to work in it, I reckon. To try and keep your ethical and moral compass. It's hard. So I think because I saw that. And I saw that someone who -- whether we believe him or not, this is what he claimed -- in his 30s, he was just doing kind of what everybody around him was doing under a situation of crisis. He was let off the hook. I mean, he wasn't just not persecuted in 1945, he was actually promoted. And then he became France's top civil servant, and then he became an MP, and then he became budget minister. I mean, this guy's career was not hurt in any way by what he did. On the contrary, right, he advanced. And yet, by the end of his life, French values had changed, so a new generation wanted to hold him to account. And I think about that a lot for all of us, right, who are sort of walking around in our 30s or 40s. Another generation or two, when we're older, might look at some of what technology we've built or our behaviour on climate change, our track record -- did we do what we could have done to slow global warming, to improve biodiversity? -- and they might, they might hold us to account saying, you could have stopped this and you didn't, right? It's not just what you did. It's what you did not do. Right. So we have to be super careful when we think about ethics, because ethics change, values change over time. And what seems okay today may not be okay in 10, 20, 30 years time, and we might be the 80 or 90 year olds who are put on trial. That is on my mind all the time, right. It's not very relaxing.
+Yeah, because I watched it, and I think what was so fascinating-- So as I say, I was in my early 20s. In fact, I was 20, when this man was put on trial, and I had just moved to France. It was the longest trial in French legal history -- it was a big deal, you could not not watch it. So I was reading this and seeing it in the press every day, and I watched the French people discussing it around me, you know, really being divisive, this stuff does not go away. And his view was: I was just following orders, I was doing what I was told to do. Which you know, you hear that a lot from engineers or people who are like, this is the design spec I've been given, or this is what my boss has told me to do, or this is what our investors want, etc. Or people feel they don't have the power to stand up because, you know what, they've got a mortgage, they've got kids, and employers know that, like, they know that and they use it as leverage against people to silence them. Or they've signed an NDA, because we get made to sign these NDAs when we work in tech, and then we get made to sign another NDA when we leave, right, so we can't disparage our employer, and maybe we're given some money so we don't talk about the things we've seen. You know, it's, it's gross -- it's a gross little world, and like you have to be very, very solid and take good care of yourself to work in it, I reckon. To try and keep your ethical and moral compass. It's hard. So I think because I saw that. And I saw that someone who -- whether we believe him or not, this is what he claimed -- in his 30s, he was just doing kind of what everybody around him was doing under a situation of crisis. He was let off the hook. I mean, he wasn't just not persecuted in 1945, he was actually promoted. And then he became France's top civil servant, and then he became an MP, and then he became budget minister. I mean, this guy's career was not hurt in any way by what he did. On the contrary, right, he advanced. And yet, by the end of his life, French values had changed, so a new generation wanted to hold him to account. And I think about that a lot for all of us, right, who are sort of walking around in our 30s or 40s. Another generation or two, when we're older, might look at some of what technology we've built or our behaviour on climate change, our track record -- did we do what we could have done to slow global warming, to improve biodiversity? -- and they might, they might hold us to account saying, you could have stopped this and you didn't, right? It's not just what you did. It's what you did not do. Right. So we have to be super careful when we think about ethics, because ethics change, values change over time. And what seems okay today may not be okay in 10, 20, 30 years time, and we might be the 80- or 90-year-olds who are put on trial. That is on my mind all the time, right. It's not very relaxing.
 
 **Brian Tarran**\
 No, and I guess it makes me think. Well, I mean, this is getting into the hypotheticals right. But is it-- if we can't necessarily predict or plan out how values might evolve over time, is it enough to be able to, to just say or to document that we asked the right questions at the time, rather than just doing things blindly. Is that where we need to kind of almost formalise our process of writing down, setting out, you know, we want to do this, we've considered these potential harms, we've considered these potential benefits, and we kind of document that so at least, you know, future generations can say well, "They thought about it. They might have not thought about it in the right way, but they tried"?
