fix callout spacing

--- a/viewpoints/interviews/posts/04/26/stephanie-hare.qmd
+++ b/viewpoints/interviews/posts/04/26/stephanie-hare.qmd
@@ -16,7 +16,7 @@ image-alt: Photo of Stephanie Hare by Mitzi de Margary. Photo supplied by Stepha
 
 We're about a year late coming to [Stephanie Hare](https://www.harebrain.co/)'s book, [*Technology is Not Neutral: A Short Guide to Technology Ethics*](https://londonpublishingpartnership.co.uk/technology-is-not-neutral/). But, as discussed in our interview below, time has only made the text more relevant. The book was written pre-ChatGPT, but Hare's explorations of ethical questions in the context of facial recognition technology and Covid-19 exposure tracking apps feel both pointed and urgent at this moment, when researchers, regulators, and regular people are weighing the opportunities and potential harms of large language models and generative AI tools.
 
-"We\'re having some sort of moment with technology ethics -- AI ethics being just a branch of that," says Hare. Reflecting on her career, spanning 25 years, she says: "The stuff that we\'re talking about today that dominates the headlines -- that is dominating the discussion in the tech sector -- was not discussed at all at the turn of the century, other than by maybe people in the science and technology studies domain or academics. But it wasn\'t filtering into boardrooms. It wasn\'t on the front pages of newspapers, and it wasn\'t being covered in the national news. So, it\'s amazing. A whole field has sprung up."
+"We're having some sort of moment with technology ethics -- AI ethics being just a branch of that," says Hare. Reflecting on her career, spanning 25 years, she says: "The stuff that we're talking about today that dominates the headlines -- that is dominating the discussion in the tech sector -- was not discussed at all at the turn of the century, other than by maybe people in the science and technology studies domain or academics. But it wasn't filtering into boardrooms. It wasn't on the front pages of newspapers, and it wasn't being covered in the national news. So, it's amazing. A whole field has sprung up."
 
 However, as Hare makes clear in our interview, we still have a long way to go to build a culture of technology ethics throughout society. Check out the full conversation below or on YouTube.
 
@@ -43,7 +43,7 @@ However, as Hare makes clear in our interview, we still have a long way to go to
 
 ## Transcript
 
-::: {.callout-warning appearance="simple"}
+::: {.callout-warning style="margin-top: 0.75rem;" appearance="simple"}
 This transcript has been produced using [speech-to-text transcription software](https://otter.ai/). It has been only lightly edited to correct mistranscriptions and remove some repetitions.
 :::
 
