fixed all callout spacings

--- a/viewpoints/interviews/posts/01/25/erica-thompson.qmd
+++ b/viewpoints/interviews/posts/01/25/erica-thompson.qmd
@@ -42,7 +42,7 @@ Erica Thompson is a senior policy fellow in the ethics of modelling and simulati
 "I think some people maybe read the book and think, 'Oh, this is just a sort of woke advertisement for diversity'. Well, it's not; it's a way of doing the maths better. The whole point is to do the maths better, make better forecasts, understand the future more effectively, and be able to make better decisions based on that information." ([33:41](https://youtu.be/RB5CQW8lbEo?t=2021))
 
 ## Transcript
-:::{.callout-warning appearance="simple"}
+:::{.callout-warning style="margin-top: 0.75rem;" appearance="simple"}
 This transcript has been produced using speech-to-text transcription software. It has been only lightly edited to correct mistranscriptions and remove repetitions. 
 :::
 
