--- a/viewpoints/interviews/posts/02/03/heidi-seibold.qmd
+++ b/viewpoints/interviews/posts/02/03/heidi-seibold.qmd
@@ -43,7 +43,7 @@ Check out our full conversation below or on [YouTube](https://youtu.be/GD2g7cJ_y
 “[Open science for the public has value because] we don't know what ideas people will have. There's so many skilled people out there that probably will do amazing things… We have this with the software Stable Diffusion right now. That's an AI that generates images from text, and it runs on my computer here. And I don't need AI skills to be able to do that. And people are building such incredible images out of this, and it's really fun to see.” ([18:50](https://youtu.be/GD2g7cJ_yE4?t=1130))
 
 ## Transcript 
-:::{.callout-warning appearance="simple"} 
+:::{.callout-warning style="margin-top: 0.75rem;" appearance="simple"} 
 This transcript has been produced using [speech-to-text transcription software](https://otter.ai/). It has been only lightly edited to correct mistranscriptions and remove repetitions.  
 ::: 
 
