--- a/viewpoints/interviews/posts/03/06/data-science-act.qmd
+++ b/viewpoints/interviews/posts/03/06/data-science-act.qmd
@@ -46,7 +46,7 @@ Check out our full conversation below or on YouTube.
 "Data tell our stories, and they reflect what's happening in our world today -- much like art around us in some ways. And a way to think about data science education is to think about what we need our data understanding to be at each point in time in our educational career, or in our lives. And it's not static, it's an evolving thing. So you have to move with the data that are being collected." ([42:54](https://youtu.be/OaRFFgKb1S0?t=2574))
 
 ## Transcript
-:::{.callout-warning appearance="simple"}
+:::{.callout-warning style="margin-top: 0.75rem;" appearance="simple"}
 This transcript has been produced using [speech-to-text transcription software](https://otter.ai/). It has been only lightly edited to correct mistranscriptions and remove repetitions. 
 :::
 
